--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,17 @@ spring:
       path: /h2-console
 
   # H2 Database ??
+  # datasource:
+  #  driver-class-name: org.h2.Driver
+  #  url: jdbc:h2:~/local;AUTO_SERVER=true
+  #  username: sa
+  #  password: hwajin123!
+
   datasource:
+    url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/local;AUTO_SERVER=true
     username: sa
-    password: hwajin123!
+    password:
 
   #JPA ??
   jpa:
